# my-2fa-app

./: .gitignore  .gitmodules  README.md  build.sh  bun.lockb  get_ntpclient_bin.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml
certificate/: cloudflare-net-base64.txt  cloudflare_net.p12
scripts/: build.sh  build_new.sh  icons.sh  show_sys.sh
src/: App.css  App.tsx  Home.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  data.rs  lib.rs  npt_client.rs  totp.rs
src/components/: timer.tsx
src/components/loading/: index.tsx  styles.css
