[package]
name = "app"
version = "0.1.0"
description = "2fa app"
authors = ["katte"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri-plugin-store = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
base32 = "0.4"
tokio = { version = "1.43.0", features = ["full"] }
hmac = "0.12.1"
sha1 = "0.10.6"
tauri-plugin-shell = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
